Added data capture for all inbound data
Added placeholder incoming handler that does notification so folks could
see where it would be done. Updated tests to check captured state.

--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Device\Impl\IOIOIncomingHandlerCaptureLog.cs" />
     <Compile Include="Device\Impl\IOIOIncomingHandlerCaptureState.cs" />
     <Compile Include="Device\Impl\IOIOIncomingHandlerDistributor.cs" />
+    <Compile Include="Device\Impl\IOIOIncomingHandlerNotifier.cs" />
     <Compile Include="Device\Impl\IOIOProtocolIncoming.cs" />
     <Compile Include="Device\Impl\IOIOImpl.cs" />
     <Compile Include="Device\IOIO.cs" />
