--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -76,8 +76,12 @@
     <Compile Include="Connection\Impl\SerialConnectionFactory.cs" />
     <Compile Include="Connection\IOIOConnection.cs" />
     <Compile Include="Connection\IOIOConnectionFactory.cs" />
-    <Compile Include="Device\Impl\IOIOHandlerCaptureInQueue.cs" />
+    <Compile Include="Device\Impl\IOIOHandlerCaptureConnectionState.cs" />
+    <Compile Include="Device\Impl\IOIOHandlerCaptureSingleQueue.cs" />
     <Compile Include="Device\Types\CapSenseCoefficients.cs" />
+    <Compile Include="MessageFrom\IAnalogInFrom.cs" />
+    <Compile Include="MessageFrom\IDigitalInFrom.cs" />
+    <Compile Include="MessageFrom\ICapSenseFrom.cs" />
     <Compile Include="MessageFrom\Impl\AnalogPinStatusFrom.cs" />
     <Compile Include="MessageFrom\Impl\SupportedInterfaceFrom.cs" />
     <Compile Include="MessageFrom\Impl\UartDataFrom.cs" />
@@ -86,7 +90,7 @@
     <Compile Include="MessageFrom\IUartDataFrom.cs" />
     <Compile Include="MessageTo\ICheckInterfaceVersionTo.cs" />
     <Compile Include="Device\Impl\IOIOHandlerCaptureLog.cs" />
-    <Compile Include="Device\Impl\IOIOHandlerCaptureState.cs" />
+    <Compile Include="Device\Impl\IOIOHandlerCaptureSeparateQueue.cs" />
     <Compile Include="Device\Impl\IOIOHandlerDistributor.cs" />
     <Compile Include="Device\Impl\IOIOHandlerNotifier.cs" />
     <Compile Include="Device\Impl\IOIOProtocolIncoming.cs" />
