--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Component\Types\PulseInputClockRate.cs" />
     <Compile Include="Component\Types\PulseInputMode.cs" />
     <Compile Include="Component\Types\ISequencerChannelConfig.cs" />
+    <Compile Include="Component\Types\PwmOutputSpec.cs" />
     <Compile Include="Component\Types\SequencerChannelConfigBinary.cs" />
     <Compile Include="Component\Types\SequencerChannelConfigFmSpeed.cs" />
     <Compile Include="Component\Types\SequencerChannelConfigPwmPosition.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Connection\Impl\SerialConnectionFactory.cs" />
     <Compile Include="Connection\IOIOConnection.cs" />
     <Compile Include="Connection\IOIOConnectionFactory.cs" />
+    <Compile Include="Device\IResourceManager.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorGeneric.cs" />
     <Compile Include="Device\Impl\IOIOHandlerCaptureConnectionState.cs" />
     <Compile Include="Device\Impl\IOIOHandlerCaptureSingleQueue.cs" />
@@ -94,6 +96,18 @@
     <Compile Include="MessageFrom\IReportAnalogPinValuesFrom.cs" />
     <Compile Include="MessageFrom\ISupportedInterfaceFrom.cs" />
     <Compile Include="MessageFrom\IUartDataFrom.cs" />
+    <Compile Include="MessageTo\CommandFactoryPulseInputFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryCapSenseFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryIcspFragment.cs" />
+    <Compile Include="MessageTo\CommandFactorySequencer.cs" />
+    <Compile Include="MessageTo\CommandFactoryTwiFragment.cs" />
+    <Compile Include="MessageTo\CommandFactorySpiFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryUartFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryPwmFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryAnalogInputFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryDigitalOutputFragment.cs" />
+    <Compile Include="MessageTo\CommandFactoryDigitalInputFragment.cs" />
+    <Compile Include="MessageTo\IAnalogInputCloseCommand.cs" />
     <Compile Include="MessageTo\ICheckInterfaceVersionCommand.cs" />
     <Compile Include="Device\Impl\IOIOHandlerCaptureLog.cs" />
     <Compile Include="Device\Impl\IOIOHandlerDistributor.cs" />
@@ -184,7 +198,15 @@
     <Compile Include="MessageFrom\IUartCloseFrom.cs" />
     <Compile Include="MessageFrom\IUartOpenFrom.cs" />
     <Compile Include="MessageTo\ICommandToIOIO.cs" />
+    <Compile Include="MessageTo\IDigitalInputCloseCommand.cs" />
+    <Compile Include="MessageTo\Impl\PwmOutputUpdateCommand.cs" />
+    <Compile Include="MessageTo\IPwmOutputCloseCommand.cs" />
+    <Compile Include="MessageTo\IDigitalOutputCloseCommand.cs" />
+    <Compile Include="MessageTo\Impl\AnalogInputCloseCommand.cs" />
     <Compile Include="MessageTo\Impl\CheckInterfaceVersionCommand.cs" />
+    <Compile Include="MessageTo\Impl\DigitalInputCloseCommand.cs" />
+    <Compile Include="MessageTo\Impl\PwmOutputCloseCommand.cs" />
+    <Compile Include="MessageTo\Impl\DigitalOutputCloseCommand.cs" />
     <Compile Include="MessageTo\Impl\UartCloseCommand.cs" />
     <Compile Include="MessageTo\Impl\AnalogInputConfigureCommand.cs" />
     <Compile Include="MessageTo\Impl\CapSenseConfigureCommand.cs" />
@@ -196,6 +218,7 @@
     <Compile Include="MessageTo\Impl\SpiMasterConfigureCommand.cs" />
     <Compile Include="MessageTo\Impl\TwiMasterConfigureCommand.cs" />
     <Compile Include="MessageTo\Impl\UartConfigureCommand.cs" />
+    <Compile Include="MessageTo\IPwmOutputUpdateCommand.cs" />
     <Compile Include="MessageTo\IUartCloseCommand.cs" />
     <Compile Include="MessageTo\Impl\SequencerConfigureCommand.cs" />
     <Compile Include="MessageTo\Impl\DigitalOutputSetValueCommand.cs" />
