--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -200,6 +200,8 @@
     <Compile Include="MessageFrom\IUartOpenFrom.cs" />
     <Compile Include="MessageTo\ICommandToIOIO.cs" />
     <Compile Include="MessageTo\IDigitalInputCloseCommand.cs" />
+    <Compile Include="MessageTo\Impl\PwmOutputUpdatePulseWidthCommand.cs" />
+    <Compile Include="MessageTo\Impl\PwmOutputUpdateDutyCycleCommand.cs" />
     <Compile Include="MessageTo\Impl\PwmOutputUpdateCommand.cs" />
     <Compile Include="MessageTo\Impl\UartSendCommand.cs" />
     <Compile Include="MessageTo\IPwmOutputCloseCommand.cs" />
