--- a/IOIOLibDotNetTest/IOIOLibDotNetTest.csproj
+++ b/IOIOLibDotNetTest/IOIOLibDotNetTest.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Device\Impl\ResourceManagerTest.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorGenericTest.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorSpecificTest.cs" />
+    <Compile Include="MessageTo\ServoTest.cs" />
     <Compile Include="MessageTo\CreateUartTest.cs" />
     <Compile Include="MessageTo\CreateAnalogInputOutputTest.cs" />
     <Compile Include="MessageTo\CreateDigitalInputOutputTest.cs" />
