--- a/IOIOLibDotNetTest/IOIOLibDotNetTest.csproj
+++ b/IOIOLibDotNetTest/IOIOLibDotNetTest.csproj
@@ -68,7 +68,8 @@
     <Compile Include="Device\Impl\ResourceManagerTest.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorGenericTest.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorSpecificTest.cs" />
-    <Compile Include="MessageTo\ServoTest.cs" />
+    <Compile Include="MessageTo\ServoTest - Copy.cs" />
+    <Compile Include="MessageTo\TwiI2CTest.cs" />
     <Compile Include="MessageTo\CreateUartTest.cs" />
     <Compile Include="MessageTo\CreateAnalogInputOutputTest.cs" />
     <Compile Include="MessageTo\CreateDigitalInputOutputTest.cs" />
