Updated L3G4200D test code
It communicates but there is no calibration code and don't know fi the
values make sense.

--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -259,6 +259,7 @@
     <Compile Include="Util\Impl\IOIOLogImpl.cs" />
     <Compile Include="Util\IOIOLog.cs" />
     <Compile Include="Util\IOIOLogManager.cs" />
+    <Compile Include="Util\LoggingUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Connection\Types\" />
