--- a/IOIOLibDotNetTest/log4net.properties
+++ b/IOIOLibDotNetTest/log4net.properties
@@ -2,21 +2,28 @@
 <log4net>
   <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %-22logger{1} - %message%newline" />
+      <conversionPattern value="%date [%-3thread] %-5level %-22logger{1} - %message%newline" />
     </layout>
   </appender>
   <!-- all output will go to the Trace logs (Diag...) -->
   <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %-22logger{1} - %message%newline" />
+      <conversionPattern value="%date [%-3thread] %-5level %-22logger{1} - %message%newline" />
     </layout>
   </appender>
   <!-- all output will go to the Debug logs . Almost identical to Trace when testing -->
   <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %-22logger{1} - %message%newline" />
+      <conversionPattern value="%date [%-3thread] %-5level %-22logger{1} - %message%newline" />
     </layout>
   </appender>
+
+  <logger name="IOIOLib.Device.Impl.IOIOProtocolIncoming">
+    <level value="Debug" />
+  </logger>
+  <logger name="IOIOLib.Device.Impl.IOIOProtocolOutgoing">
+    <level value="Debug" />
+  </logger>
   <root>
     <level value="DEBUG" />
     <appender-ref ref="ConsoleAppender" />
