Found bug where we reused inbound byte buffer
Increased baud rate to 38400 on com port. Seems to work
Improved Twi2CTest for gyroscope.  Almost know enough to add to WPF app.

--- a/IOIOLibDotNetTest/log4net.properties
+++ b/IOIOLibDotNetTest/log4net.properties
@@ -18,11 +18,22 @@
     </layout>
   </appender>
 
+
+
+  <logger name="IOIOLib.Device.Impl.IOIOHandlerCaptureLog">
+    <level value="DEBUG" />
+  </logger>
+  <logger name="IOIOLib.Device.Impl.IOIOHandlerCaptureSingleQueue">
+    <level value="INFO" />
+  </logger>
+  <logger name="IOIOLib.Device.Impl.IOIOImpl">
+    <level value="INFO" />
+  </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolIncoming">
-    <level value="Debug" />
+    <level value="INFO" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolOutgoing">
-    <level value="Debug" />
+    <level value="INFO" />
   </logger>
   <root>
     <level value="DEBUG" />
