migrate all handlers to the abstract class.
added tostring to all message from.

--- a/IOIOLibDotNetTest/log4net.properties
+++ b/IOIOLibDotNetTest/log4net.properties
@@ -24,16 +24,16 @@
     <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOHandlerCaptureSingleQueue">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOImpl">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolIncoming">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolOutgoing">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <root>
     <level value="DEBUG" />
