--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Device\Impl\ObserverTxStatusI2c.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusSpi.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusUart.cs" />
+    <Compile Include="Device\IObservableHandlerIOIO.cs" />
     <Compile Include="Device\IResourceManager.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorGeneric.cs" />
     <Compile Include="Device\Impl\ResourceAllocatorSpecific.cs" />
@@ -104,7 +105,7 @@
     <Compile Include="Message\IMessageIOIO.cs" />
     <Compile Include="Message\IMessageNotificationIOIO.cs" />
     <Compile Include="Message\Impl\IOIOMessageNotification.cs" />
-    <Compile Include="Message\IObservableIOIO.cs" />
+    <Compile Include="Device\IObservableIOIO.cs" />
     <Compile Include="Message\IObserverIOIO.cs" />
     <Compile Include="MessageFrom\Impl\AnalogPinStatusFrom.cs" />
     <Compile Include="MessageFrom\Impl\SupportedInterfaceFrom.cs" />
