more logging around bytes sent and received
More capturing of byte counts in observer so we can actually use the
observer to figure out how far behind we ar

--- a/IOIOLib/IOIOLib.csproj
+++ b/IOIOLib/IOIOLib.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Device\Impl\ObserverLogAndCaptureLog.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusBase.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusI2c.cs" />
+    <Compile Include="Device\Impl\ObserverTxStatusPoco.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusSpi.cs" />
     <Compile Include="Device\Impl\ObserverTxStatusUart.cs" />
     <Compile Include="Device\IObservableHandlerIOIO.cs" />
