--- a/IOIOLibDotNetTest/log4net.properties
+++ b/IOIOLibDotNetTest/log4net.properties
@@ -30,10 +30,10 @@
     <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolIncoming">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <logger name="IOIOLib.Device.Impl.IOIOProtocolOutgoing">
-    <level value="INFO" />
+    <level value="DEBUG" />
   </logger>
   <root>
     <level value="DEBUG" />
